Adding more handlers for entry and isoform

--- a/blast/pom.xml
+++ b/blast/pom.xml
@@ -22,7 +22,7 @@
     <dependencies>
         <dependency>
             <groupId>org.nextprot</groupId>
-            <artifactId>nextprot-api-commons</artifactId>
+            <artifactId>nextprot-api-core</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
