Add dep to nextprot-commons

--- a/blast/pom.xml
+++ b/blast/pom.xml
@@ -25,5 +25,10 @@
             <artifactId>nextprot-api-core</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.nextprot</groupId>
+            <artifactId>nextprot-api-commons</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 </project>
