--- a/blast/pom.xml
+++ b/blast/pom.xml
@@ -7,13 +7,13 @@
     <parent>
         <groupId>org.nextprot</groupId>
         <artifactId>nextprot-api-master</artifactId>
-        <version>2.2.0-SNAPSHOT</version>
+        <version>2.3.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <groupId>org.nextprot</groupId>
     <artifactId>nextprot-api-blast</artifactId>
-    <version>2.2.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <build>
         <finalName>nextprot-api-blast</finalName>
