--- a/blast/pom.xml
+++ b/blast/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.nextprot</groupId>
         <artifactId>nextprot-api-master</artifactId>
-        <version>2.5.0</version>
+        <version>2.5.1-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
